tests/NormalTests/paczka1/fuzzy1/43403577.err
Error in line 10: q2nBQl S366 7,2
Error in line 9: G2vbDDKCMd S366 98,7
Error in line 24: A325 A118 43,2
